mesa (7.10.3-4~bpo60+1) UNRELEASED; urgency=low

  * Rebuild for squeeze-backports.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 09 Jul 2011 14:54:41 +0200

mesa (7.10.3-4) unstable; urgency=medium

  [ Cyril Brulebois ]
  * Accept libmotif-dev as an alternative to lesstif2-dev in
    libglw1-mesa-dev's dependencies, as requested by Michael Hanke
    (Closes: #631236).
  * Merge upstream 7.10 branch up to e041956cb2.
  * Wrap Breaks fields.
  * Add Breaks: {xserver-xorg-core,libgl1-mesa-glx}-no-multiarch to
    libgl1-mesa-dri* to handle upgrades from squeeze-backports (without
    multiarch) to wheezy (with multiarch).
  * Add lintian overrides for breaks-without-version accordingly, those
    packages are only provided in squeeze-backports.
  * Replace “The OpenGL utility library…” with “Mesa OpenGL utility
    library…” in the description of the libglu1-mesa* packages.
  * Rename all remaining *.install files as *.install.in and use
    “${DEB_HOST_MULTIARCH}” instead of “*”.
  * Use the sed substitution on all debian/*.in files accordingly.
  * Remove debian/clean, and use the same for loop to remove the generated
    files.
  * Set urgency to “medium” to speed things up. Migration to testing is
    a prerequisite for squeeze backports.

  [ Sven Joachim ]
  * Fix comments in libegl1-mesa.symbols to avoid impending FTBFS with
    the upcoming dpkg-dev 1.16.1.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 07 Aug 2011 21:50:46 +0200

mesa (7.10.3-3) unstable; urgency=low

  * Update the “Breaks: xserver-xorg-core” from “(<= 2:1.10.2-1)” to
    “(<< 2:1.10.2-2)”. The first binNMU migrated to testing too soon,
    so it was needed to rebuild it again, in testing. Updating the
    Breaks makes sure that a multiarch mesa doesn't get installed with
    a server built against a pre-multiarch mesa.
  * Merge upstream 7.10 branch up to 1ad06c7a25.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 19 Jun 2011 17:31:17 +0200

mesa (7.10.3-2) unstable; urgency=low
