@@ -10,8 +10,8 @@ NOT_INSTALLED := \
 	dri/usr/include/GL/vms_x_fix.h \
 	dri/usr/include/GL/wglext.h \
 	dri/usr/include/GL/wmesa.h \
-	dri/usr/lib/*/libGL.so \
-	dri/usr/lib/*/pkgconfig/gl.pc \
+	dri/usr/lib/libGL.so \
+	dri/usr/lib/pkgconfig/gl.pc \
 	usr/include/GL/glext.h \
 	usr/include/GL/glfbdev.h \
 	usr/include/GL/gl.h \
@@ -28,16 +28,16 @@ NOT_INSTALLED := \
 
 # Architecture-specific additional files:
 NOT_INSTALLED_i386 = \
-	usr/lib/*/i686/cmov/libGL.so \
-	usr/lib/*/i686/cmov/libGLU.so \
-	usr/lib/*/i686/cmov/libGLU.so.1 \
-	usr/lib/*/i686/cmov/libGLU.so.1.* \
-	usr/lib/*/i686/cmov/libGLw.so \
-	usr/lib/*/i686/cmov/libGLw.so.1 \
-	usr/lib/*/i686/cmov/libGLw.so.1.* \
-	usr/lib/*/i686/cmov/pkgconfig/glw.pc \
-	usr/lib/*/i686/cmov/pkgconfig/glu.pc \
-	usr/lib/*/i686/cmov/pkgconfig/gl.pc
+	usr/lib/i686/cmov/libGL.so \
+	usr/lib/i686/cmov/libGLU.so \
+	usr/lib/i686/cmov/libGLU.so.1 \
+	usr/lib/i686/cmov/libGLU.so.1.* \
+	usr/lib/i686/cmov/libGLw.so \
+	usr/lib/i686/cmov/libGLw.so.1 \
+	usr/lib/i686/cmov/libGLw.so.1.* \
+	usr/lib/i686/cmov/pkgconfig/glw.pc \
+	usr/lib/i686/cmov/pkgconfig/glu.pc \
+	usr/lib/i686/cmov/pkgconfig/gl.pc
 
 # Same for linux, kfreebsd, and hurd on i386:
 NOT_INSTALLED_kfreebsd-i386 = $(NOT_INSTALLED_i386)
